// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ProfileMenu] renders successfully 1`] = `
<ul
  className="profile"
/>
`;

exports[`[ProfileMenu] when icons provided renders successfully 1`] = `
<ul
  className="profile"
>
  <li
    className="item"
    key="user"
    onClick={[Function]}
    role="button"
  >
    <Icon
      type="user"
    />
  </li>
  <li
    className="item"
    key="phone"
    onClick={[Function]}
    role="button"
  >
    <Icon
      type="phone"
    />
  </li>
</ul>
`;

exports[`[ProfileMenu] when icons provided renders successfully with active item 1`] = `
<ul
  className="profile"
>
  <li
    className="item active"
    key="user"
    onClick={[Function]}
    role="button"
  >
    <Icon
      type="user"
    />
  </li>
  <li
    className="item"
    key="phone"
    onClick={[Function]}
    role="button"
  >
    <Icon
      type="phone"
    />
  </li>
</ul>
`;
